# company_search

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data/: company_database.xlsx  techsauce_companies.csv
src/agent/: dataframe_agent.py
src/preprocess/: preprocess.py
src/scripts/: run_web.sh
src/web/: app.py
